# lvgl_rpi_framebuffer

./: .gitignore  CMakeLists.txt  README.md  configs  lv_conf.h  lv_drv_conf.h  main.c
app/: CMakeLists.txt  app.c  app.h
scripts/: clean.sh  cmake.sh  debug_kill.sh  debug_start.sh  make.sh  nfs_start.sh
